--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/src/assets/TaskedLogoImageNew.png"
+      href="/src/assets/FaseelaLogoImageCropped.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tasked</title>
+    <title>Faseela</title>
   </head>
   <body>
     <div id="root"></div>
